[package]
name = "branchtransfer"
version = "0.1.0-DEV"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/ajinkya-k/branchtransfer"
homepage = "https://ajinkyakokandakar.com/branchtransfer"
readme = "README.md"

[[bin]]
name = "bxfer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
git2 = "0.20.2"
tempfile = "3.20.0"
